code25_all/python/816156.txt
python setup.py install 

from SimPy.Simulation import *

Traceback (most recent call last):
  File "C:/Python30/pruebas/prueba1", line 1, in <module>
    from SimPy.Simulation import *
  File "C:\Python30\SimPy\Simulation.py", line 320
    print 'SimPy.Simulation %s' %__version__,
                              ^
SyntaxError: invalid syntax
>>> 

